packages/yew-macro/tests/hook_attr/hook_macro-fail.stderr
error[E0277]: `impl Hook<Output = String>` doesn't implement `std::fmt::Display`
  --> tests/hook_attr/hook_macro-fail.rs:26:15
   |
26 |         <div>{content}</div>
   |               ^^^^^^^ `impl Hook<Output = String>` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `impl Hook<Output = String>`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `ToString` for `impl Hook<Output = String>`
   = note: required because of the requirements on the impl of `From<impl Hook<Output = String>>` for `VNode`
   = note: required because of the requirements on the impl of `Into<VNode>` for `impl Hook<Output = String>`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `Into<NodeSeq<impl Hook<Output = String>, VNode>>` for `impl Hook<Output = String>`
   = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
